tanja/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Noto Sans', sans-serif;
    color: black;
    line-height: 1.6rem;
}

header {
    background-color: steelblue;
    position: sticky;
    top: 0;
    left: 0;
    height: 15vh;
    width: 100%;
    z-index: 10;
}

nav ul {
    text-align: center;
    list-style-type: none;
}

nav ul li {
    display: inline-block;
    padding: 9.5vh 2vw 2vh;
}

nav ul li a {
    color: white;
    text-decoration: none;
    text-transform: uppercase;
    padding-bottom: 1.5vh;
    font-weight: bold;
}

nav ul li a:hover {
    color: black;
    border-bottom: 0.5vh solid black;
}

#hero_banner {
    background-color: linen;
    background-image: url('Banner.png');
    background-repeat: no-repeat;
    background-position: right;
    background-attachment: scroll;
    background-size: cover;
    height: 40vh;
    width: 100%;
}

.container {
    max-width: 100vw;
}

#about_me {
    width: 100%;
    position: relative;
}

#about_container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    height: 100%;
    position: relative;
    margin: 10vh 10vw;
    padding: 15vh;
    background-color: linen;
    border-radius: 5px;
}

h1, h2 {
    padding-bottom: 4vh;
}

p {
    padding-bottom: 2vh;
}

h3 {
    padding-top: 3vh;
}

#education {
    width: 100%;
    position: relative;
}

#education_container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    height: 100%;
    position: relative;
    margin: 10vh 10vw;
    padding: 15vh;
    background-color: lightsteelblue;
    border-radius: 5px;   
}

#edu_container {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    position: relative;
}

#bc, #university {
    flex: 1;
    background-color: linen;
    display: block;
    padding: 2vh 2vw;
    border-radius: 5px;
}

#bc {
    margin-right: 2vw;
}

#work_experience {
    width: 100%;
    position: relative;
}

#work_container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    height: 100%;
    position: relative;
    margin: 10vh 10vw;
    padding: 15vh;
    background-color: lightsteelblue;
    border-radius: 5px;  
}

ul.resume {
    display: block;
    list-style-type: none;
    background-color: linen;
    padding: 2vh 2vw;
    border-radius: 5px;
}

#image_slider {
    position: relative;
    max-width: 100vw; 
    height: auto;
}

#image_container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    height: 100%;
    position: relative;
    margin: 10vh 10vw;
    padding: 20vh 20vw; 
}

.my_slides {
    width: 100%;
    max-width: 960px;
    height: auto;
    min-width: 300px;
}

footer {
    background-color: #333;
    color: white;
    height: auto;
    width: 100vw;
    position: relative;
    max-width: 100vw;
}

#contact {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
    position: relative;
    margin: 10vh 10vw 0;
    padding: 15vh;
}

#contact li {
    display: block;
    list-style-type: none;
}    

#contact li > p {
    padding-bottom: 1vh;
}

#contact_container {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    position: relative;
}

#mail, #map {
    flex: 1;
    display: block;
}

#mail {
    padding-right: 2vw;
}

#mail a {
    text-decoration: none;
    color: white;
}

#mail a:hover {
    text-decoration: none;
    color: lightgrey;
}

#mail a:active {
    color: steelblue;
}

#print_btn {
    background-color: lightgrey;
    width: 12vw;
    height: auto;
    text-align: center;
    border-radius: 3px;
    position: relative;
    border: none;
    outline: none;
    color: black;
    font-weight: normal;
    font-size: 1.2rem;
    padding: 1rem;
}

#print_btn:hover {
    cursor: pointer;
    background-color: steelblue;
}

#to_top_btn {
    display: none;
    background-color: lightgray;
    width: 5vw;
    height: 5vh;
    text-align: center;
    border-radius: 3px;
    position: fixed;
    bottom: 5vh;
    right: 10%;
    z-index: 100;
    border: none;
    outline: none;
    color: black;
}

#to_top_btn:hover {
    cursor: pointer;
    background-color: steelblue;
}

/* iPads */
@media only screen and (min-width: 768px) and (max-device-width: 1024px) {

    header {
        height: 6vh;
    }

    nav ul li {
        padding: 2vh 2vw;
    }

    #hero_banner {
        height: 25vh;
    }

    #edu_container {
        display: block;
    }

    #bc {
        margin-right: 0;
        margin-bottom: 1vh;

    }
}

@media (max-width: 320px) {

    header {
        position: static;
        height: 10vh;
    }

    h1, h2, h3, p, a, #map {
        margin-left: 2vw;
        margin-right: 2vw;
    }

    .container {
        width: 320px;
    }

    nav ul li {
        display: inline-block;
        padding: 0.3vh;
    }

    nav ul li a {
        padding-bottom: 0;
    }

    nav ul li a:hover {
        border-bottom: 0;
    }

    #hero_banner {
        height: 20vh;
    }

    #about_container, 
    #education_container, #work_container, #contact {
        display: block;
        margin: 0;
        padding: 2vh 0;
        border-radius: 0;
    }

    #print_btn {
        font-size: 0.8rem;
        padding: 0.2rem;
        margin-left: 2vw;
    }

    #edu_container { 
        display: block;
    }

    #bc, #university {
        background-color: lightsteelblue;
        padding: 0;
        border-radius: 0;
    }

    #work_container {
        background-color: linen;
    }

    ul.resume {
        padding: 0;
    }

    #image_container {
        display: block;
        padding: 0;
        margin: 2vh 0;
    }

    #my_slides {
        max-width: 320px;
    }

    #mail {
        padding-right: 0;
    }

    #contact_container {
        display: block;
    }

    #to_top_btn {
        width: 8vw;
        right: 5%;
    }
}

@media (min-width: 321px) and (max-width: 767px) {
    header {
        position: static;
        height: 10vh;
    }

    h1, h2, h3, p, a, #map {
        margin-left: 2vw;
        margin-right: 2vw;
    }

    nav ul li {
        display: inline-block;
        padding: 0.3vh;
    }

    nav ul li a {
        padding-bottom: 0;
    }

    nav ul li a:hover {
        border-bottom: 0;
    }

    #hero_banner {
        height: 22vh;
    }

    #about_container, 
    #education_container, #work_container, #contact {
        display: block;
        margin: 0;
        padding: 2vh 0;
        border-radius: 0;
    }

    #print_btn {
        font-size: 0.8rem;
        padding: 0.2rem;
        margin-left: 2vw;
    }

    #edu_container { 
        display: block;
    }

    #bc, #university {
        background-color: lightsteelblue;
        padding: 0;
        border-radius: 0;
    }

    #work_container {
        background-color: linen;
    }

    ul.resume {
        padding: 0;
    }

    #image_container {
        display: block;
        padding: 0;
        margin: 2vh 0;
    }

    #my_slides {
        max-width: 320px;
    }

    #contact_container {
        display: block;
    }

    #mail {
        padding-right: 0;
    }

    #to_top_btn {
        width: 8vw;
    }
}

